// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`10732.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const isNodeOrTokenOfTypeWithConditions = <
  NodeOrTokenType extends (NodeOrToken extends TSESTree.Node ? AST_NODE_TYPES : AST_TOKEN_TYPES),
>() => true;

type A = {
  [
    NodeOrTokenType in 
      NodeOrToken extends TSESTree.Node
      ? AST_NODE_TYPES : AST_TOKEN_TYPES
  ]: NodeOrTokenType
}

=====================================output=====================================
const isNodeOrTokenOfTypeWithConditions = <
  NodeOrTokenType extends (NodeOrToken extends TSESTree.Node
    ? AST_NODE_TYPES
    : AST_TOKEN_TYPES),
>() => true;

type A = {
  [
    NodeOrTokenType in NodeOrToken extends TSESTree.Node
      ? AST_NODE_TYPES
      : AST_TOKEN_TYPES
  ]: NodeOrTokenType,
};

================================================================================
`;

exports[`comments.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
type A<T: string/* comment */> = B;
type A<T: /* comment */string> = B;
type A<T:/* comment */ string> = B;
type A<T /* comment */:string> = B;
type A<T/* comment */ :string> = B;
type A</* comment */T :string> = B;

=====================================output=====================================
type A<T: string /* comment */> = B;
type A<T: /* comment */ string> = B;
type A<T: /* comment */ string> = B;
type A<T /* comment */ : string> = B;
type A<T /* comment */ : string> = B;
type A</* comment */ T: string> = B;

================================================================================
`;

exports[`const-type-params.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// Simple
type T<const X> = X;
function f<const T>(): void {}
<const T>(x: T) => {}
class C<const T>{}

// With variance
type T<const +X> = X;
function f<const +T>(): void {}
<const +T>(x: T) => {}
class D<const +T>{}

=====================================output=====================================
// Simple
type T<const X> = X;
function f<const T>(): void {}
<const T>(x: T) => {};
class C<const T> {}

// With variance
type T<const +X> = X;
function f<const +T>(): void {}
<const +T>(x: T) => {};
class D<const +T> {}

================================================================================
`;

exports[`empty_generic_break.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class X {
	a: B<> = SuperSuperSuperSuperSuperSuperSuperSuperSuperSuperSuperSuperSuperLong;
}

=====================================output=====================================
class X {
  a: B<> =
    SuperSuperSuperSuperSuperSuperSuperSuperSuperSuperSuperSuperSuperLong;
}

================================================================================
`;
